chỉnh lại admin vói trang sản phẩm

--- a/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Catalogies/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Xóa danh mục</h2>
 
-<h4>Bạn có chắc chắn muốn xóa danh mục này?</h4>
+<h4 class="alert alert-danger">Bạn có chắc chắn muốn xóa danh mục này?</h4>
 <div>
     <hr />
     <dl class="dl-horizontal">
