--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Delete.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt style="color:red">
-           Loại SP
+           Loại sản phẩm
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt style="color:red">
-           Tên SP
+            Tên sản phẩm
         </dt>
 
         <dd>
