--- a/webBanHang/webBanHang/Areas/Admin/Views/Customers/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Customers/Details.cshtml
@@ -70,6 +70,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Phone }) |
+    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = Model.Phone }) |
     @Html.ActionLink("Quay lại", "Index")
 </p>
