--- a/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Delete.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Delete.cshtml
@@ -5,15 +5,21 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Xóa</h2>
+<h2>Xóa khuyến mại</h2>
 
-<h3>Bạn có chắc chắn xóa khuyến mại này?</h3>
+<h4 class="alert alert-danger">Bạn có chắc chắn xóa khuyến mại này?</h4>
 <div>
-    <h4>KHUYẾN MẠI</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt style="color:red">
-           Giá Trị
+            Mã khuyến mại
+        </dt>
+        <dd style="color:black">
+            @Html.DisplayFor(model => model.MaKhuyenMai)
+        </dd>
+
+        <dt style="color:red">
+            Giá Trị
         </dt>
 
         <dd style="color:black">
@@ -27,7 +33,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
             @Html.ActionLink("Quay lại", "Index")
         </div>
     }
