--- a/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Details.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/KhuyenMais/Details.cshtml
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.MaKhuyenMai }) |
+    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = Model.MaKhuyenMai }) |
     @Html.ActionLink("Quay lại", "Index")
 </p>
