--- a/webBanHang/webBanHang/Areas/Admin/Views/Products/Create.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/Products/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Tạo mới</h2>
 
-@using (Html.BeginForm("Create","Products",FormMethod.Post, new { enctype = "multipart/form-data"}))
+@using (Html.BeginForm("Create", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -15,48 +15,48 @@
         <h4>Sản phẩm</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group"  style="color:red">
-           Mã SP
-            <div class="col-md-10"  style="color:black">
+        <div class="form-group" style="color:red">
+            Mã sản phẩm
+            <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.ProID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProID, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group"  style="color:red">
-           Loại SP
+        <div class="form-group" style="color:red">
+            Loại sản phẩm
             <div class="col-md-10" style="color:black">
                 @Html.DropDownList("ID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group"  style="color:red">
-           Tên Sản Phẩm
+        <div class="form-group" style="color:red">
+            Tên Sản Phẩm
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.ProName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProName, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group"  style="color:red">
-           Số Lượng
+        <div class="form-group" style="color:red">
+            Số Lượng
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group"  style="color:red">
-           Giá Bán
+        <div class="form-group" style="color:red">
+            Giá Bán
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group"  style="color:red">
-           Hình Ảnh
+        <div class="form-group" style="color:red">
+            Hình Ảnh
             <div class="col-md-10" style="color:black">
                 <img id="output" class="img-thumbnail" alt="anh" width="180" height="200" src="~/wwwroot/images/anhBackGround.jpeg" />
                 <p>
@@ -66,16 +66,16 @@
             </div>
         </div>
 
-        <div class="form-group"  style="color:red">
-           Ngày Nhập
+        <div class="form-group" style="color:red">
+            Ngày Nhập
             <div class="col-md-10" style="color:black">
-                @Html.EditorFor(model => model.DateOfImport, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DateOfImport, new { htmlAttributes = new { @class = "form-control", @type="date" } })
                 @Html.ValidationMessageFor(model => model.DateOfImport, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group"  style="color:red">
-           Mô tả
+        <div class="form-group" style="color:red">
+            Mô tả
             <div class="col-md-10" style="color:black">
                 @Html.EditorFor(model => model.ProDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProDescription, "", new { @class = "text-danger" })
