--- a/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
+++ b/webBanHang/webBanHang/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                         @Html.ActionLink("Giới thiệu", "TrangChu", "TrangChu")
                     </li>
                     <li class="header_item">
-                        @Html.ActionLink("Liên hệ", "TrangChu", "TrangChu")
+                        @Html.ActionLink("Tin Tức", "Index", "TinTuc")
                     </li>
                     <li class="header_item">
                         @Html.ActionLink("Sản phẩm", "Index", "SanPham")
