--- a/webBanHang/webBanHang/wwwroot/css/style.css
+++ b/webBanHang/webBanHang/wwwroot/css/style.css
@@ -525,3 +525,70 @@ body {
                     border-right: 1px solid black;
                 }
 /*# sourceMappingURL=style.css.map */
+/*-------Liên hệ---------*/
+.row {
+    max-height: 1500px;
+}
+
+.card-deck {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 60px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid #e2dada;
+    word-wrap: break-word;
+    width: 300px;
+}
+
+.crop-img1 {
+    max-height: 230px;
+    width: 300px;
+    overflow: hidden;
+}
+
+/*.card-body a h2 {
+    text-align: justity;
+}*/
+
+img {
+    opacity: 0.8;
+    margin: 0 10px 5px 0;
+}
+
+    img:hover {
+        box-shadow: 0px 0px 30px gray;
+        opacity: 1;
+    }
+
+/*-----Section----------*/
+.tintuc {
+    padding-bottom: 30px;
+}
+
+.cropimg2 img {
+    width: 250px;
+    height: 150px;
+    overflow: hidden;
+}
+
+.media {
+    display: flex;
+    padding-top: 30px;
+}
+
+.media-body {
+    margin-top: -20px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 800px;
+}
