--- a/webBanHang/webBanHang/Areas/Admin/Views/SanPhamBanChay/Index.cshtml
+++ b/webBanHang/webBanHang/Areas/Admin/Views/SanPhamBanChay/Index.cshtml
@@ -9,14 +9,14 @@
 <table class="table">
     <tr style="color:red">
         <th>
-            Mã SP
+            Tên sản phẩm
         </th>
 
         <th>
-            Tên SP
+            Loại sản phẩm
         </th>
         <th>
-            Số lượng
+            Số lượng có
         </th>
         <th>
             Giá
@@ -28,7 +28,7 @@
             Ngày nhập
         </th>
         <th>
-            Số lượng mua
+            Số lượng khách mua
         </th>
 
         <th></th>
@@ -38,11 +38,11 @@
     {
         <tr style="color:black">
             <td>
-                @Html.DisplayFor(modelItem => item.ProID)
+                @Html.DisplayFor(modelItem => item.ProName)
             </td>
 
             <td>
-                @Html.DisplayFor(modelItem => item.ProName)
+                @Html.DisplayFor(modelItem => item.CataName)
             </td>
 
             <td>
