--- a/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
+++ b/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
@@ -8,27 +8,29 @@
     var spbc = (List<SPNoiBat>)ViewBag.SanPhamBanChay;
 }
 
-
 <style>
     .content_img {
         position: relative;
     }
 
-        .content_img a {
+        .content_img .con {
             position: absolute;
             top: 0%;
             left: 30%;
-            transform: translate(0%, 0%);
+            transform: translate(-15%, 0%);
             opacity: 0;
             font-size: 25px;
-            color: blue;
-            background-color: floralwhite;
+            color: red;
+            background-color: #53a5f5;
             border: none;
             height: 30px;
+            width:130px;
+            border-radius:15px;
+            text-align:center
         }
 
-    .content_item:hover a {
-        transform: translate(0%, 350%);
+    .content_item:hover .con {
+        transform: translate(-15%, 350%);
         opacity: 1;
         transition: 1s;
     }
@@ -53,8 +55,11 @@
                         @{
                             string ImagePath = "~/wwwroot/images/" + item.ProImage;
                         }
-                        <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
-                        <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                        <a href="/SanPham/Detail?id=@item.ProID">
+                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                        </a>
+                       
+                        <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
                             Đặt mua
                         </a>
                     </div>
@@ -79,8 +84,11 @@
                             @{
                                 string ImagePath = "~/wwwroot/images/" + item.ProImage;
                             }
-                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
-                            <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                            <a href="/SanPham/Detail?id=@item.ProID">
+                                <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                            </a>
+                           
+                            <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
                                 Đặt mua
                             </a>
                         </div>
@@ -106,8 +114,11 @@
                             @{
                                 string ImagePath = "~/wwwroot/images/" + item.ProImage;
                             }
-                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
-                            <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                            <a href="/SanPham/Detail?id=@item.ProID">
+                                <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                            </a>
+                            
+                            <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
                                 Đặt mua
                             </a>
                         </div>
@@ -133,8 +144,11 @@
                             @{
                                 string ImagePath = "~/wwwroot/images/" + item.ProImage;
                             }
-                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
-                            <a href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                            <a href="/SanPham/Detail?id=@item.ProID">
+                                <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                            </a>
+                            
+                            <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
                                 Đặt mua
                             </a>
                         </div>
