--- a/webBanHang/webBanHang/wwwroot/css/style.css
+++ b/webBanHang/webBanHang/wwwroot/css/style.css
@@ -558,12 +558,12 @@ body {
     text-align: justity;
 }*/
 
-img {
+.rounded {
     opacity: 0.8;
-    margin: 0 10px 5px 0;
+    transition: 0.2s
 }
 
-    img:hover {
+    .rounded:hover {
         box-shadow: 0px 0px 30px gray;
         opacity: 1;
     }
