--- a/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
+++ b/webBanHang/webBanHang/Views/TrangChu/TrangChu.cshtml
@@ -24,9 +24,9 @@
             background-color: #53a5f5;
             border: none;
             height: 30px;
-            width:130px;
-            border-radius:15px;
-            text-align:center
+            width: 130px;
+            border-radius: 15px;
+            text-align: center
         }
 
     .content_item:hover .con {
@@ -45,33 +45,37 @@
     </div>
     <!-- list product -->
 
-    <div class="content_products">
-        <h2>SẢN PHẨM BÁN CHẠY</h2>
-        <div class="content_list">
-            @foreach (var item in spbc)
-            {
-                <div class="content_item">
-                    <div class="content_img">
-                        @{
-                            string ImagePath = "~/wwwroot/images/" + item.ProImage;
-                        }
-                        <a href="/SanPham/Detail?id=@item.ProID">
-                            <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
-                        </a>
-                       
-                        <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
-                            Đặt mua
-                        </a>
+    @if (spbc.Count() > 0)
+    {
+        <div class="content_products">
+            <h2>SẢN PHẨM BÁN CHẠY @ViewBag.pa</h2>
+            <div class="content_list">
+                @foreach (var item in spbc)
+                {
+                    <div class="content_item">
+                        <div class="content_img">
+                            @{
+                                string ImagePath = "~/wwwroot/images/" + item.ProImage;
+                            }
+                            <a href="/SanPham/Detail?id=@item.ProID">
+                                <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
+                            </a>
+
+                            <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
+                                Đặt mua
+                            </a>
+                        </div>
+                        <div class="content_detail">
+                            <span class="category">@Html.DisplayFor(modelItem => item.CataName)</span><br />
+                            <span class="name">@Html.DisplayFor(modelItem => item.ProName)</span><br />
+                            <span class="price">@Html.DisplayFor(modelItem => item.Price)đ</span>
+                        </div>
                     </div>
-                    <div class="content_detail">
-                        <span class="category">@Html.DisplayFor(modelItem => item.CataName)</span><br />
-                        <span class="name">@Html.DisplayFor(modelItem => item.ProName)</span><br />
-                        <span class="price">@Html.DisplayFor(modelItem => item.Price)đ</span>
-                    </div>
-                </div>
-            }
+                }
+            </div>
         </div>
-    </div>
+    }
+
     <div class="content_products">
         <h2>THỊT CÁ DÂN DÃ</h2>
         <div class="content_list">
@@ -87,7 +91,7 @@
                             <a href="/SanPham/Detail?id=@item.ProID">
                                 <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
                             </a>
-                           
+
                             <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
                                 Đặt mua
                             </a>
@@ -117,7 +121,7 @@
                             <a href="/SanPham/Detail?id=@item.ProID">
                                 <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
                             </a>
-                            
+
                             <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
                                 Đặt mua
                             </a>
@@ -147,7 +151,7 @@
                             <a href="/SanPham/Detail?id=@item.ProID">
                                 <img src="@Url.Content(ImagePath)" width="100" height="200" class="img-thumbnail" />
                             </a>
-                            
+
                             <a class="con" href="@Url.Action("ThemGioHang", "Giohang", new { @class="addCart", @sMaSP = item.ProID, @strURL = Request.Url.ToString() })">
                                 Đặt mua
                             </a>
